@@ -1,3 +1,11 @@
+2005-01-15  Matthias Clasen  <mclasen@redhat.com>
+
+	Merge from trunk:
+
+	* glib/gthread.c:
+	* gthread/gthread-posix.c: Correct the gettime calculations
+	once more.  (#395203, Chris Wilson)
+
 2007-01-15  Tor Lillqvist  <tml@novell.com>
 
 	* glib/gwin32.c (g_win32_getlocale): Simplify greatly. Instead of
